fixing overlap

--- a/less/pixtory.less
+++ b/less/pixtory.less
@@ -26,6 +26,7 @@ h1, h2, h3, h4, h5, p {
   .offset3;
   margin-top: 30px;
   font-size: 1.5em;
+  width: 340px;
 }
 
 form {
@@ -46,6 +47,8 @@ form {
     margin: 0 auto;
     text-align: center;
     margin-top: 10px;
+    width: 302px;
+    font-size: 1.2em;
   }
 
   #hand {
